# cascade

./: .gitignore  README.md  cascade.py  pyproject.toml  requirements.txt
cascade/: agent.py  cli.py  config.py  models.py  utils.py
cascade/core/: conversation.py  display.py  orchestrator.py
cascade/llm/: agent.py  anthropic.py  base.py  factory.py  ollama.py  openai.py
data/: config.yaml  hitl.yaml
data/prompts/: guided-chat.txt  hitl.json  pirate.txt  simulation.json  simulation.txt
